Adiciona botoes de start, stop e reset

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="container-main">
       <div class="container-form">
         <form>
-          <input type="text" disabled value="40">
+          <input type="text" disabled id="inputContador" value="0">
           <div class="box-item_btn">
-            <button>Start</button>
-            <button>Reset</button>
+            <button id="btnToggle">Start</button>
+            <button id="btnReset">Reset</button>
             <button>Salvar na lista</button>
           </div>
         </form>
@@ -25,6 +25,6 @@
       </div>
     </div>
   </main>
-  <script type="module" src="./script.js" async></script>
+  <script type="module" src="./script.js"></script>
 </body>
 </html>
